# snake

./: CMakeLists.txt  README.md
CoolSnake/: README.md
CoolSnake/include/: SnakeGame.h
CoolSnake/src/: main.cpp
